<resources>
    <string name="app_name">Instagram</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="description_hint">Enter a description</string>
    <string name="create">Post</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="new_post">New Post</string>
    <string name="user_profile">User Profile</string>
    <string name="logout">Logout</string>
    <string name="image_caption">My caption here!</string>
    <string name="post_image">My image here!</string>
    <string name="name">name</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="created_at">Created 0:00</string>
    <string name="created_at_default">1/1/2019 00:00</string>
    <string name="comment">Write a comment...</string>
    <string name="comment_btn">Comment</string>
</resources>
