<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:transitionName="postImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:srcCompat="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/image_caption"
        android:transitionName="description"
        app:layout_constraintEnd_toEndOf="@+id/ivPostImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ivPostImage"
        app:layout_constraintTop_toBottomOf="@+id/ivHeart" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:transitionName="name"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/post_image"
        android:transitionName="profileImage"
        app:layout_constraintBottom_toBottomOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/ivPostImage"
        app:layout_constraintTop_toTopOf="@+id/tvName"
        app:srcCompat="@drawable/ic_user_profile" />

    <ImageView
        android:id="@+id/ivHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/ivPostImage"
        app:layout_constraintTop_toBottomOf="@+id/ivPostImage"
        app:srcCompat="@drawable/selector_heart" />

    <ImageView
        android:id="@+id/ivComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivHeart"
        app:layout_constraintStart_toEndOf="@+id/tvNumLikes"
        app:layout_constraintTop_toTopOf="@+id/ivHeart"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_comment" />

    <ImageView
        android:id="@+id/ivDirectMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivComment"
        app:layout_constraintStart_toEndOf="@+id/ivComment"
        app:layout_constraintTop_toTopOf="@+id/ivComment"
        app:srcCompat="@drawable/selector_direct_message" />

    <ImageView
        android:id="@+id/ivSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/ivDirectMessage"
        app:layout_constraintEnd_toEndOf="@+id/ivPostImage"
        app:layout_constraintTop_toTopOf="@+id/ivDirectMessage"
        app:srcCompat="@drawable/selector_save" />

    <ImageView
        android:id="@+id/ivOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ivPostImage"
        app:layout_constraintEnd_toEndOf="@+id/ivPostImage"
        app:srcCompat="@drawable/ic_options" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/created_at"
        app:layout_constraintEnd_toEndOf="@+id/tvDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/tvNumLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/ivHeart"
        app:layout_constraintStart_toEndOf="@+id/ivHeart"
        app:layout_constraintTop_toTopOf="@+id/ivHeart" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvComments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreatedAt"
        app:layout_constraintBottom_toTopOf="@+id/etCompose"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCompose"
        android:hint="@string/comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnComment"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnComment"
        android:text="@string/comment_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>